fix z-index in header

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -8,6 +8,7 @@
   width: 100%;
   position: fixed;
   background-color: $silver-100;
+  z-index: 999;
 }
 
 .nav {
@@ -643,7 +644,7 @@
 .testimonials {
   position: relative;
   padding-bottom: 16.4rem;
-  z-index: -1;
+
   & .title {
     text-align: center;
   }
